# otorepair

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/broken_http_server/: server.py
examples/crash_on_start/: app.py
src/otorepair/: __init__.py  __main__.py  backends.py  circuit_breaker.py  cli.py  detector.py  fixer.py  git_snapshot.py  history.py  log.py  loop.py  patterns.py  runner.py
tests/: test_backends.py  test_circuit_breaker.py  test_cli.py  test_detector.py  test_fixer.py  test_git_snapshot.py  test_history.py  test_log.py  test_loop.py  test_patterns.py  test_runner.py
tests/e2e/: conftest.py  fake_claude.py  test_e2e.py
tests/e2e/fixtures/: always_crashes.py  clean_app.py  crash_missing_config.py  fix_create_config.py
