[project]
name = "otorepair"
version = "0.2.1"
description = "Auto-healing dev loop CLI"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
otorepair = "otorepair.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/otorepair"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
